--- a/index.html
+++ b/index.html
@@ -3,5 +3,75 @@
     <head>
         <meta charset="UTF-8">
         <title>Photo Gallery Assignment</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+<body>
+    <header>
+        <h1>TK Photography</h1>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Gallery</li>
+                <li>Contact</li>
+            </ul>
+    </nav>
+    </header>
+    <main>
+    <!-- top -->
+        <h2>About</h2>
+        <p>Hello!</p>
+        <p>I&apos;m TK and I&apos;m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it&apos;s taken me all over the world.</p>
+        <h2>Gallery</h2>
+        <p>Here are some highlights of my work. The locations and year are in the caption.</p>
+
+        <img src="Chile.png" alt="image of beach">
+        <p>Chile, 2001</p>
+
+        <img src="Guatemala.png" alt="image of ocean with mountains at sunset">
+        <p>Guatemala, 1997</p>
+
+        <img src="Hawaii.png" alt="image of mountains on Hawaii">
+        <p>Hawaii, 2010</p>
+
+        <img src="Iran.png" alt="image of dry land">
+        <p>Iran, 1999</p>
+
+        <img src="Ireland.png" alt="image of green fields">
+        <p>Ireland, 2012</p>
+
+        <img src="Italy.png" alt="image of lake with mountains">
+        <p>Italy, 2015</p>
+
+        <img src="Moab-Desert.png" alt="image of canyons">
+        <p>Moab Desert, 2020</p>
+
+        <img src="Rocky-Mountains.png" alt="image of rocky mountains">
+        <p>Rocky Mountains, 2009</p>
+
+        <img src="Switzerland.png" alt="image of snow mountains">
+        <p>Switzerland, 2014</p>
+
+        <img src="UK.png" alt="image of grass fields"> 
+        <p>UK, 2005</p>
+
+        <img src="USA.png" alt="image of a meadow">
+        <p>USA, 2021</p>
+
+        <img src="Wyoming.png" alt="image of forest with lake">
+        <p>Wyoming, 2021</p>
+        <section>
+            <h2>Contact</h2>
+            <p>Please fill out this form and I&apos;ll connect with you soon.</p>
+
+            <!-- Your contact information -->           
+            <p>Name (Your full name)</p>
+            <p>Email (Enter your email address)</p>
+            <p>Message (What can I help you with?)</p>
+            <p>Submit</p>
+        </section>
+        <footer>
+            <p>Copyright 2021 TK Photography</p>
+        </footer>
+        </main>
+</body>
 </html>
