--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>I&apos;m TK and I&apos;m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it&apos;s taken me all over the world.</p>
         <h2>Gallery</h2>
         <p>Here are some highlights of my work. The locations and year are in the caption.</p>
-        <section class="gallery">
+        <div class="gallery">
             <div class="image1">
                 <img src="Chile.png" alt="image of beach">
                 <p>Chile, 2001</p>
@@ -72,20 +72,20 @@
                 <img src="Wyoming.png" alt="image of forest with lake">
                 <p>Wyoming, 2021</p>
             </div>
-        </section>
+        </div>
         <section id="contact">
             <h2>Contact</h2>
             <p id="form">Please fill out this form and I&apos;ll connect with you soon.</p>
 
             <!-- Your contact information -->  
-            <section id="contact2">         
+            <div id="contact2">         
                 <p>Name</p>
-                <p id="text">Your Full Name</p>
+                <p class="text">Your Full Name</p>
                 <p>Email</p>
-                <p id="text">Enter your email address</p>
+                <p class="text">Enter your email address</p>
                 <p>Message</p>
-                <p id="help">What can I help you with?</p>
-            </section>    
+                <p class="help">What can I help you with?</p>
+            </div>    
             <button>Submit</button>
         </section>
         <footer>
