--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="#top">Top</a></li>
             </ul>
     </nav>
     </header>
